deluge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: deluge
  name: deluge
  selfLink: /apis/apps/v1/namespaces/default/deployments/deluge
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deluge
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deluge
    spec:
      containers:
      - image: linuxserver/deluge
        imagePullPolicy: Always
        name: deluge
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: deluge
          mountPath: /config
        - name: deluge-download
          mountPath: /download
      volumes:
      - name: deluge
        hostPath:
          path: /mnt/Media/k8s/deluge
      - name: deluge-download
        hostPath:
          path: /mnt/VMs/Downloads/Torrents/
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
