heimdall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: heimdall
  name: heimdall
  selfLink: /apis/apps/v1/namespaces/default/deployments/heimdall
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: heimdall
    spec:
      containers:
      - image: linuxserver/heimdall
        imagePullPolicy: Always
        name: heimdall
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: heimdall
          mountPath: /config
      volumes:
      - name: heimdall
        hostPath:
          path: /mnt/Media/k8s/heimdall
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
