jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: jackett
  name: jackett
  selfLink: /apis/apps/v1/namespaces/default/deployments/jackett
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jackett
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jackett
    spec:
      containers:
      - image: linuxserver/jackett
        imagePullPolicy: Always
        name: jackett
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 9117
        volumeMounts:
        - name: jackett
          mountPath: /config
      volumes:
      - name: jackett
        hostPath:
          path: /media/Config/jackett
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
