jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: jellyfin
  name: jellyfin
  selfLink: /apis/apps/v1/namespaces/default/deployments/jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jellyfin
    spec:
      containers:
      - image: linuxserver/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: jellyfin
          mountPath: /config
        - name: jellyfin-lib
          mountPath: /mnt/Media/Video
        - name: jellyfin-transcode
          mountPath: /transcode
      volumes:
      - name: jellyfin
        hostPath:
          path: /media/Config/jellyfin
      - name: jellyfin-lib
        hostPath:
          path: /media/Video
      - name: jellyfin-transcode
        emptyDir:
          medium: Memory
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
