plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: plex
  name: plex
  selfLink: /apis/apps/v1/namespaces/default/deployments/plex
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: plex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: plex
    spec:
      containers:
      - image: linuxserver/plex
        imagePullPolicy: Always
        name: plex
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: plex
          mountPath: /config
        - name: plex-lib
          mountPath: /mnt/Media/Video
      volumes:
      - name: plex
        hostPath:
          path: /media/Config/plex
      - name: plex-lib
        hostPath:
          path: /media/Video
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
