sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: sonarr
  name: sonarr
  selfLink: /apis/apps/v1/namespaces/default/deployments/sonarr
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sonarr
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sonarr
    spec:
      containers:
      - image: linuxserver/sonarr
        imagePullPolicy: Always
        name: sonarr
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr
          mountPath: /config
        - name: sonarr-download
          mountPath: /download
        - name: sonarr-lib
          mountPath: /mnt/Media/Video/TV
      volumes:
      - name: sonarr
        hostPath:
          path: /mnt/Media/k8s/sonarr
      - name: sonarr-download
        hostPath:
          path: /mnt/VMs/Downloads/Torrents/Done
      - name: sonarr-lib
        hostPath:
          path: /mnt/Media/Video/TV
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
