steamcache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: steamcache
  name: steamcache
  selfLink: /apis/apps/v1/namespaces/default/deployments/steamcache
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: steamcache
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: steamcache
    spec:
      containers:
      - image: lancachenet/generic
        imagePullPolicy: Always
        name: steamcache
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 80
        volumeMounts:
        - name: steamcache-data
          mountPath: /data/cache
        - name: steamcache-logs
          mountPath: /data/logs
      volumes:
      - name: steamcache-data
        hostPath:
          path: /mnt/Media/k8s/steamcache/cache
      - name: steamcache-logs
        hostPath:
          path: /mnt/Media/k8s/steamcache/data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
