tautulli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: tautulli
  name: tautulli
  selfLink: /apis/apps/v1/namespaces/default/deployments/tautulli
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tautulli
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tautulli
    spec:
      containers:
      - image: linuxserver/tautulli
        imagePullPolicy: Always
        name: tautulli
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 8181
        volumeMounts:
        - name: tautulli
          mountPath: /config
        - name: plex-logs 
          mountPath: /logs
      volumes:
      - name: tautulli
        hostPath:
          path: /mnt/Media/k8s/tautulli
      - name: plex-logs
        hostPath:
          path: "/mnt/Media/k8s/plex/Library/Application Support/Plex Media Server/Logs/"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
