transmission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: transmission
  name: transmission
  selfLink: /apis/apps/v1/namespaces/default/deployments/transmission
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: transmission
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: transmission
    spec:
      containers:
      - image: linuxserver/transmission
        imagePullPolicy: Always
        name: transmission
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: transmission
          mountPath: /config
        - name: transmission-download
          mountPath: /download
      volumes:
      - name: transmission
        hostPath:
          path: /media/Config/transmission
      - name: transmission-download
        hostPath:
          path: /media/Downloads
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
