heimdall-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: heimdall
spec:
  selector:
    app: heimdall
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
