jackett-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
  - protocol: TCP
    port: 9117
  type: ClusterIP
