plex-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: plex-external
spec:
  selector:
    app: plex
  ports:
  - protocol: TCP
    port: 32400
    nodePort: 32400
  type: NodePort
