sonarr-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - protocol: TCP
    port: 8989
  type: ClusterIP
