steamcache-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: steamcache
spec:
  selector:
    app: steamcache
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
